Replacement of '=' by ':'

--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,6 +1,6 @@
 // UI Colors
 
-$primary_color = #F6B352;
-$secondary_color = #F68657;
-$tertiary_color = #383A3F;
-$quaternary_color = #1F2124;
+$primary_color: #F6B352;
+$secondary_color: #F68657;
+$tertiary_color: #383A3F;
+$quaternary_color: #1F2124;
