React Component : Navbar

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -53,3 +53,18 @@ table {
 
 @import '_font';
 @import '_vars';
+
+/*
+  Components
+*/
+
+@import 'component/navbar';
+
+/*
+  Style
+*/
+
+body
+{
+  background-color: $primary-color;
+}
