--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,6 +1,6 @@
 // UI Colors
 
-$primary_color: #F6B352;
-$secondary_color: #F68657;
-$tertiary_color: #383A3F;
-$quaternary_color: #1F2124;
+$primary_color: #1e2022;
+$secondary_color: #52616a;
+$tertiary_color: #c9d6de;
+$quaternary_color: #f0f5f9;
