--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -53,6 +53,7 @@ table {
 
 @import '_font';
 @import '_vars';
+@import '_specs';
 
 /*
   Components
@@ -67,5 +68,7 @@ table {
 
 body
 {
-  background-color: $primary-color;
+  font-family: "Nunito", serif;
+  background-color: $tertiary_color;
+  line-height: 1.6em;
 }
