--- a/src/style/component/footer.scss
+++ b/src/style/component/footer.scss
@@ -3,7 +3,7 @@
   display: inline-flex;
   width: 100%;
   height: max-content;
-  background-color: $quaternary_color;
+  background-color: $primary_color;
   position: fixed;
   bottom: 0;
   left: 0;
