--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -15,7 +15,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -63,6 +63,8 @@ table {
 @import 'component/footer';
 
 @import 'component/partial/menubar';
+
+@import 'Form';
 
 /*
   Style
