--- a/src/style/component/partial/menubar.scss
+++ b/src/style/component/partial/menubar.scss
@@ -2,14 +2,11 @@
 {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   width: 100%;
   height: max-content;
   user-select: none;
-  border: 1px $quaternary_color solid;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
 
   > :not(:last-child)
   {
@@ -31,8 +28,8 @@
     {
       cursor: pointer;
       background-color: darken($quaternary_color, 25%);
-      letter-spacing: 0.1em;
-      transform: scaleX(110%) scaleY(110%);
+      letter-spacing: 0.25em;
+      font-weight: bold;
     }
 
     &_icon
@@ -46,5 +43,10 @@
     {
       font-size: large;
     }
+  }
+
+  @media screen and (max-width: 768px)
+  {
+    flex-wrap: wrap;
   }
 }
