--- a/src/style/component/navbar.scss
+++ b/src/style/component/navbar.scss
@@ -48,6 +48,21 @@
         {
           letter-spacing: 0.2em;
         }
+
+        @media screen and (max-width: 768px)
+        {
+          font-size: x-large;
+        }
+
+        @media screen and (max-width: 600px)
+        {
+          font-size: large;
+        }
+
+        @media screen and (max-width: 500px)
+        {
+          font-size: medium;
+        }
       }
     }
 
