Creation of Menagelec Page | Slider | BubbleCard

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -64,6 +64,10 @@ table {
 @import 'component/footer';
 
 @import 'component/partial/menubar';
+@import 'component/partial/slider';
+@import 'component/partial/bubblecard';
+
+@import 'HomeButton';
 
 @import 'Form';
 @import 'Title';
