--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -63,6 +63,9 @@ table {
 @import 'component/navbar';
 @import 'component/footer';
 
+@import 'component/content/project';
+@import 'component/content/skills';
+
 @import 'component/partial/menubar';
 @import 'component/partial/slider';
 @import 'component/partial/bubblecard';
