React Component : Alert

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -68,6 +68,7 @@ table {
 @import 'component/partial/menubar';
 @import 'component/partial/slider';
 @import 'component/partial/bubblecard';
+@import 'component/partial/alert';
 
 @import 'HomeButton';
 
