--- a/src/style/Title.scss
+++ b/src/style/Title.scss
@@ -3,13 +3,11 @@
   display: block;
   font-size: inherit;
   letter-spacing: 0.20em;
-  margin: 0.25em;
   color: black;
   width: auto;
   height: auto;
   justify-items: center;
   align-items: center;
-  padding: 0.25em;
   text-align: center;
   line-height: 1.5em;
 
@@ -26,5 +24,11 @@
   &.-bold
   {
     font-weight: bold;
+  }
+
+  &.-left
+  {
+    justify-items: left;
+    text-align: left;
   }
 }
