Suppression of _specs

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -53,7 +53,6 @@ table {
 
 @import '_font';
 @import '_vars';
-@import '_specs';
 @import '_animations';
 
 /*
@@ -76,6 +75,7 @@ table {
 @import 'Title';
 @import 'Grid';
 @import 'Text';
+@import 'Card';
 
 /*
   Style
