--- a/src/style/component/partial/alert.scss
+++ b/src/style/component/partial/alert.scss
@@ -3,6 +3,9 @@
   display: flex;
   border-radius: 5px;
   align-items: center;
+  height: 2em;
+  margin: 1.75rem 1.55em;
+  padding: 0.75em;
 
   &.-red
   {
@@ -36,7 +39,6 @@
     position: relative;
     right: 0;
     width: 2em;
-    height: 2em;
 
     &::before
     {
