--- a/src/style/Grid.scss
+++ b/src/style/Grid.scss
@@ -6,4 +6,19 @@
   row-gap: 15px;
   column-gap: 15px;
   justify-items: center;
+
+  &.-x2C
+  {
+    grid-template-columns: repeat(2, 0.5fr);
+
+    @media screen and (max-width: 786px)
+    {
+      grid-template-columns: repeat(1, auto);
+    }
+  }
+
+  &.-x1C
+  {
+    grid-template-columns: repeat(1, auto);
+  }
 }
