Title.scss update

--- a/src/style/Title.scss
+++ b/src/style/Title.scss
@@ -10,6 +10,7 @@
   align-items: center;
   text-align: center;
   line-height: 1.5em;
+  margin-bottom: 0.75em;
 
   &.-big
   {
@@ -18,7 +19,7 @@
 
   &.-medium
   {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
   }
 
   &.-bold
