--- a/src/style/Container.scss
+++ b/src/style/Container.scss
@@ -1,9 +1,7 @@
 .Container
 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 2em;
-  margin-right: 2em;
+  display: grid;
+  grid-template-columns: 1fr;
   width: auto;
 
   &.-ml-1 { margin-left: 0.25rem !important; }
